# mnist

./: Dockerfile  ml-work-cronjob  pyproject.toml  run.sh  run_db.sh
note/: 0.jpg:Zone.Identifier  3.jpg:Zone.Identifier  Untitled.ipynb  mnist.ipynb  model.ipynb
src/mnist/: Dockerfile  db.py  main.py  worker.py
src/mnist/model/: model.py
tests/: test_worker.py
