[project]
name = "mnist"
version = "0.7.6"
description = "MNIST"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.1",
    "jigeum>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GNU"}


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
ml-worker = 'mnist.worker:run'
